--- a/610ScoutingApp/nbproject/private/private.properties
+++ b/610ScoutingApp/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 javac.debug=true
 javadoc.preview=true
 user.properties.file=C:\\Users\\Wilson\\.netbeans\\7.1\\build.properties
-work.dir=D:\\Homework\\Programming\\Java\\Scouting\\src
+work.dir=src
