--- a/610ScoutingApp/nbproject/project.properties
+++ b/610ScoutingApp/nbproject/project.properties
@@ -25,7 +25,7 @@ debug.test.classpath=\
     ${run.test.classpath}
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Scouting.jar
+dist.jar=${dist.dir}/610ScoutingApp.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
