--- a/Scouting/KSI/nbproject/project.properties
+++ b/Scouting/KSI/nbproject/project.properties
@@ -27,13 +27,31 @@ dist.jar=${dist.dir}/KSI.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itext-pdfa-5.3.5-javadoc.jar=src/iText/itext-pdfa-5.3.5-javadoc.jar
+file.reference.itext-pdfa-5.3.5-sources.jar=src/iText/itext-pdfa-5.3.5-sources.jar
+file.reference.itext-pdfa-5.3.5.jar=src/iText/itext-pdfa-5.3.5.jar
+file.reference.itext-xtra-5.3.5-javadoc.jar=src/iText/itext-xtra-5.3.5-javadoc.jar
+file.reference.itext-xtra-5.3.5-sources.jar=src/iText/itext-xtra-5.3.5-sources.jar
+file.reference.itext-xtra-5.3.5.jar=src/iText/itext-xtra-5.3.5.jar
+file.reference.itextpdf-5.3.5-javadoc.jar=src/iText/itextpdf-5.3.5-javadoc.jar
+file.reference.itextpdf-5.3.5-sources.jar=src/iText/itextpdf-5.3.5-sources.jar
+file.reference.itextpdf-5.3.5.jar=src/iText/itextpdf-5.3.5.jar
 file.reference.JTattoo.jar=src/ksi/JTattoo.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.JTattoo.jar}
+    ${file.reference.JTattoo.jar}:\
+    ${file.reference.itext-pdfa-5.3.5-javadoc.jar}:\
+    ${file.reference.itext-pdfa-5.3.5-sources.jar}:\
+    ${file.reference.itext-pdfa-5.3.5.jar}:\
+    ${file.reference.itext-xtra-5.3.5-javadoc.jar}:\
+    ${file.reference.itext-xtra-5.3.5-sources.jar}:\
+    ${file.reference.itext-xtra-5.3.5.jar}:\
+    ${file.reference.itextpdf-5.3.5-javadoc.jar}:\
+    ${file.reference.itextpdf-5.3.5-sources.jar}:\
+    ${file.reference.itextpdf-5.3.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -66,7 +84,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=ksi.Window
+main.class=ksi.WindowScreen
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
